Feat:formulario terminado

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./styles/academic.css">
     <link rel="stylesheet" href="./styles/experience.css">
     <link rel="stylesheet" href="./styles/formcontato.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Fonte del Proyecto Raleway -->
@@ -266,10 +267,30 @@
                     <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
                     <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
                     <form class="formcontato__form" name="form">
-                        <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre" required>
-                        <input class="formcontato__input" type="email" name="email" placeholder="E-mail" required>
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto" required>
-                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
+                        <div class="input-container">
+                           <input class="formcontato__input" id="name" type="text" name="nombre" placeholder="Nombre" required>
+                           <label class="input-label" for="name">Nombre</label>
+                           <!-- <span class="input-message-error">Este campo no es valido</span> -->
+                        </div>
+
+                        <div class="input-container">
+                           <input class="formcontato__input" id="email" type="email" name="email" placeholder="E-mail" required>
+                           <label class="input-label" for="E-mail">E-mail</label>
+                           <!-- <span class="input-message-error">Este campo no es valido</span> -->
+                        </div>
+
+                        <div class="input-container">
+                           <input class="formcontato__input" id="asunto" type="text" name="asunto" placeholder="Assunto" required>
+                           <label class="input-label" for="asunto">Asunto</label>
+                           <!-- <span class="input-message-error">Este campo no es valido</span> -->
+                        </div>
+
+                        <div class="input-container">
+                           <textarea class="formcontato__input formcontato__textarea" rows="5" cols="40" id="mensaje" name="mensaje" placeholder="Mensaje"></textarea>
+                           <label class="input-label" for="mensaje">Mensaje</label>
+                           <!-- <span class="input-message-error">Este campo no es valido</span> -->
+                        </div>
+                     
                         <button type="submit" class="formcontato__botao">Enviar mensaje</button>
                     </form>
                 </div>
