Feat:New media query

--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Referencia de la hoja de estilo de Css -->
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="./styles/menu.css">
-    <link rel="stylesheet" href="./styles/title.css">
-    <link rel="stylesheet" href="./styles/about.css">
-    <link rel="stylesheet" href="./styles/skills.css">
-    <link rel="stylesheet" href="./styles/hobbies.css">
-    <link rel="stylesheet" href="./styles/academic.css">
-    <link rel="stylesheet" href="./styles/experience.css">
-    <link rel="stylesheet" href="./styles/formcontato.css">
-    <link rel="stylesheet" href="./styles/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Fonte del Proyecto Raleway -->
@@ -23,7 +14,7 @@
 </head>
 <body>
     <!-- Sección del Menú  -->
-    <div class="tudo">
+    <div class="main__container">
     <section class="menu">
         <header class="menu__header">
             <img src="assets\vector.png">
