--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="menu__list__item"><a href="#hobbies">Hobbies</a></li>
                 <li class="menu__list__item"><a href="#formacion">Formación</a></li>
                 <li class="menu__list__item"><a href="#xp">Proyectos</a></li>
-                <li class="menu__list__item"><a href="#contacto">Contacto@fulana.com</a></li>
+                <li class="menu__list__item"><a href="#contacto">contacto@fulana.com</a></li>
             </ul>
             <li class="menu__list__item__contato"><a href="#contacto">contacto@fulana.com</a></li>
         </nav>
@@ -64,6 +64,7 @@
 
     <!-- Sección de Skills -->
     <section class="skills" id="skills">
+        <div class="skills__container">
         <h3 class="skills__title">Skills</h3>
             <div class="skills__line">
                 <div class="skills__box">
@@ -108,10 +109,12 @@
                     </ul>
                 </div>
         </div>
+    </div>
     </section>
 
     <!-- Sección de Hobbies -->
     <section class="hobbies" id="hobbies">
+        <div class="hobbies__container">
         <h3 class="hobbies__title">Hobbies</h3>
             <div class="hobbies__line">
                 <div class="hobbies__box">
@@ -156,10 +159,12 @@
                     </ul>
                 </div>
         </div>
+    </div>
     </section>
 
         <!-- Sección de Formación académica -->
     <section class="academic" id="formacion">
+        <div class="academic__container">
         <h2 class="academic__title" >Formación académica</h2>
         <div class="academic__courses">
             <div class="academic__courses__box">
@@ -187,10 +192,12 @@
                 </ul>
             </div>
         </div>
+    </div>
     </section>
 
     <!-- Sección de Experiencia Profesional/Proyectos-->
     <section class="experience" id="xp">
+        <div class="experience__container">
         <h2 class="experience__section__title" >Experiencia Profesional</h2>
         <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
@@ -244,8 +251,11 @@
                             <span class="experience__repo"><a href="https://github.com/alura-challenges/challenge-one-juego-ahorcado"><button class="experiencia__botao--repo">Repositório</button></a></span>
                             <span class="experience__demo"><a href=""><button class="experience__botao--demo">Ver demo</button></a></span>
                     </div>
-        </div>
-        </div>  
+                
+                </div>
+            </div>
+        </div> 
+    </section> 
 
         <!-- Sección de Contacto -->
         <section class="formcontato" id="contacto">
